# Lemma

./: .gitignore  README.md  augment_foreign_quadrants.py  augment_fourth_quadrant.py  book_list.md  check_aozora.py  check_db_debug.py  check_db_quadrants.py  debug_html.py  docker-compose.yml  fix_db_logic.py  get_result.py  get_result2.py  get_stats.py  get_stats2.py  get_stats_tmp.py  get_stats_tmp2.py  get_wiki_stats.py  insert_aozora_books.py  insert_bestsellers.py  insert_expanded_bestsellers.py  insert_narou_books.py  insert_ndl_foreign_books.py  insert_wikidata_books.py  insert_wikipedia_books.py  insert_wikipedia_books_light.py  inspect_raw_db.py  lemma_history.walkthrough  lemma_status.task  pack_project.py  purge_db.py  repair_database.py  task_resolved.md  test_mimi_inference.py
backend/: Dockerfile  afternoon_works.csv  audit_schemas.py  awards_history.csv  build_and_test_vectors.py  bulk_clean.py  bulk_vectorize.py  clean_database.py  cleanse_openbd_data.py  comic_beam_works.csv  data_triage.py  database.py  debug_engine.py  debug_wiki_tables.py  docker-compose.yml  fetch_google_books_balanced.py  fetch_google_books_maximal.py  fetch_google_books_publishers.py  fetch_manga_awards.py  fetch_manga_awards_expanded.py  fetch_manga_expanded_v2.py  fetch_manga_platforms.py  fetch_openbd_bulk.py  fetch_openbd_pure_books_1m.py  fetch_rakuten_books.py  fetch_recent_bulk.py  finalize_db.py  fix_era_data.py  fix_vectors.py  heuristic_vectorizer.py  ingest_bulk_manga.py  literary_vocab.json  main.py  media_arts_history.csv  merge_to_master.py  models.py  monitor_fetch.py  (+26 more)
(+26 files in other folders)
